# xplane-webapi

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
aux/: index.html
beacon/: index.html
changelog/: index.html
command/: index.html
dataref/: index.html
docs/: api.md  aux.md  beacon.md  command.md  dataref.md  example.md  index.md  rest_api.md  ws_api.md
docs/usage/: index.md
example/: index.html
examples/: airport_info.json  fdr.py  fdr_optional.py  geoutil.py  kml.py  more_rest.py  oooi.py  posreport.py  simple_beacon.py  simple_monitor.py  simple_rest.py  simple_upd.py  simple_ws.py  smooth.py  template.py  unitutil.py  xgs.py  xpwsapp.py
reference/: index.html
rest_api/: index.html
search/: search_index.json
tests/: beacon.py  rest.py  test_rest.py
usage/: index.html
ws_api/: index.html
xpwebapi/: __init__.py  api.py  beacon.py  rest.py  udp.py  ws.py
